[package]
name = "ferrogame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
glfw = "0.45.0"
fern = {version = "0.6.1", features = ["colored"]}
log = "0.4.17"

[lib]
crate-type = ["rlib"]